Refactored directory structure to better organize code.

--- a/package.json
+++ b/package.json
@@ -1,65 +1,65 @@
 {
-  "name": "advent-of-code-2023",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-	"test": "jest",
-    "day11": "node day_1/part_1.js",
-    "day12": "node day_1/part_2.js",
-    "day21": "node day_2/part_1.js",
-    "day22": "node day_2/part_2.js",
-    "day31": "node day_3/part_1.js",
-    "day32": "node day_3/part_2.js",
-    "day41": "node day_4/part_1.js",
-    "day42": "node day_4/part_2.js",
-    "day51": "node day_5/part_1.js",
-    "day52": "node day_5/part_2.js",
-    "day61": "node day_6/part_1.js",
-    "day62": "node day_6/part_2.js",
-    "day71": "node day_7/part_1.js",
-    "day72": "node day_7/part_2.js",
-    "day81": "node day_8/part_1.js",
-    "day82": "node day_8/part_2.js",
-    "day91": "node day_9/part_1.js",
-    "day92": "node day_9/part_2.js",
-    "day101": "node day_10/part_1.js",
-    "day102": "node day_10/part_2.js",
-    "day111": "node day_11/part_1.js",
-    "day112": "node day_11/part_2.js",
-    "day121": "node day_12/part_1.js",
-    "day122": "node day_12/part_2.js",
-    "day131": "node day_13/part_1.js",
-    "day132": "node day_13/part_2.js",
-    "day141": "node day_14/part_1.js",
-    "day142": "node day_14/part_2.js",
-    "day151": "node day_15/part_1.js",
-    "day152": "node day_15/part_2.js",
-    "day161": "node day_16/part_1.js",
-    "day162": "node day_16/part_2.js",
-    "day171": "node day_17/part_1.js",
-    "day172": "node day_17/part_2.js",
-    "day181": "node day_18/part_1.js",
-    "day182": "node day_18/part_2.js",
-    "day191": "node day_19/part_1.js",
-    "day192": "node day_19/part_2.js",
-    "day201": "node day_20/part_1.js",
-    "day202": "node day_20/part_2.js",
-    "day211": "node day_21/part_1.js",
-    "day212": "node day_21/part_2.js",
-    "day221": "node day_22/part_1.js",
-    "day222": "node day_22/part_2.js",
-    "day231": "node day_23/part_1.js",
-    "day232": "node day_23/part_2.js",
-    "day241": "node day_24/part_1.js",
-    "day242": "node day_24/part_2.js",
-    "day251": "node day_25/part_1.js",
-    "day252": "node day_25/part_2.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "jest": "^29.7.0"
-  }
+	"name": "advent-of-code-2023",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest",
+		"day11": "node day_1/part_1/part_1.js",
+		"day12": "node day_1/part_2/part_2.js",
+		"day21": "node day_2/part_1/part_1.js",
+		"day22": "node day_2/part_2/part_2.js",
+		"day31": "node day_3/part_1/part_1.js",
+		"day32": "node day_3/part_2/part_2.js",
+		"day41": "node day_4/part_1/part_1.js",
+		"day42": "node day_4/part_2/part_2.js",
+		"day51": "node day_5/part_1/part_1.js",
+		"day52": "node day_5/part_2/part_2.js",
+		"day61": "node day_6/part_1/part_1.js",
+		"day62": "node day_6/part_2/part_2.js",
+		"day71": "node day_7/part_1/part_1.js",
+		"day72": "node day_7/part_2/part_2.js",
+		"day81": "node day_8/part_1/part_1.js",
+		"day82": "node day_8/part_2/part_2.js",
+		"day91": "node day_9/part_1/part_1.js",
+		"day92": "node day_9/part_2/part_2.js",
+		"day101": "node day_10/part_1/part_1.js",
+		"day102": "node day_10/part_2/part_2.js",
+		"day111": "node day_11/part_1/part_1.js",
+		"day112": "node day_11/part_2/part_2.js",
+		"day121": "node day_12/part_1/part_1.js",
+		"day122": "node day_12/part_2/part_2.js",
+		"day131": "node day_13/part_1/part_1.js",
+		"day132": "node day_13/part_2/part_2.js",
+		"day141": "node day_14/part_1/part_1.js",
+		"day142": "node day_14/part_2/part_2.js",
+		"day151": "node day_15/part_1/part_1.js",
+		"day152": "node day_15/part_2/part_2.js",
+		"day161": "node day_16/part_1/part_1.js",
+		"day162": "node day_16/part_2/part_2.js",
+		"day171": "node day_17/part_1/part_1.js",
+		"day172": "node day_17/part_2/part_2.js",
+		"day181": "node day_18/part_1/part_1.js",
+		"day182": "node day_18/part_2/part_2.js",
+		"day191": "node day_19/part_1/part_1.js",
+		"day192": "node day_19/part_2/part_2.js",
+		"day201": "node day_20/part_1/part_1.js",
+		"day202": "node day_20/part_2/part_2.js",
+		"day211": "node day_21/part_1/part_1.js",
+		"day212": "node day_21/part_2/part_2.js",
+		"day221": "node day_22/part_1/part_1.js",
+		"day222": "node day_22/part_2/part_2.js",
+		"day231": "node day_23/part_1/part_1.js",
+		"day232": "node day_23/part_2/part_2.js",
+		"day241": "node day_24/part_1/part_1.js",
+		"day242": "node day_24/part_2/part_2.js",
+		"day251": "node day_25/part_1/part_1.js",
+		"day252": "node day_25/part_2/part_2.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"jest": "^29.7.0"
+	}
 }
