Updated to use esm rather than commonjs for modules and parsed day 2 input data to begin working through problem statement.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
 		"test": "jest",
 		"day11": "node day_1/part_1/part_1.js",
