--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test": "NODE_OPTIONS=--experimental-vm-modules jest",
+		"test": "NODE_OPTIONS=--experimental-vm-modules jest --silent",
 		"day11": "node day_1/part_1/part_1.js",
 		"day12": "node day_1/part_2/part_2.js",
 		"day21": "node day_2/part_1/part_1.js",
